--- a/src/main/resources/templates/buttonOne.html
+++ b/src/main/resources/templates/buttonOne.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>The Button One</title>
-    <link rel="stylesheet" type="text/css" href="home.css">
+    <div th:replace="_fragments::head (page=button1)"></div>
 </head>
 <body>
 <div class="container" style="background-color: darkgray">
