--- a/src/main/resources/templates/buttonTwo.html
+++ b/src/main/resources/templates/buttonTwo.html
@@ -4,26 +4,6 @@
     <div th:replace="_fragments::head (page=button2)"></div>
 </head>
 <body>
-<div class="container" style="background-color: chartreuse">
-    <div class="headbar">
-        <h1>This is the Button Two page.</h1>
-    </div>
-    <div>
-        <nav class="navbar">
-            <div class="likeButton" onclick="window.location.href='/'">
-                Home
-            </div>
-            <div class="likeButton" onclick="window.location.href='/button1'">
-                Button 1
-            </div>
-            <div class="likeButton buttonActive" onclick="window.location.href='/button2'">
-                Button 2
-            </div>
-            <div class="likeButton" onclick="window.location.href='/button3'">
-                Button 3
-            </div>
-        </nav>
-    </div>
-</div>
+<div th:replace="_fragments::navigation (headerText='This is the Button Two page', page='button2')"></div>
 </body>
 </html>
