--- a/src/main/resources/templates/buttonOne.html
+++ b/src/main/resources/templates/buttonOne.html
@@ -4,6 +4,7 @@
     <div th:replace="_fragments::head (page=button1)"></div>
 </head>
 <body>
-<div th:replace="_fragments::navigation (headerText='This is the Button One page', page='button1')"></div>
+<div th:replace="_fragments::navigation (page='button1')"></div>
+<div class="jumbotron">This is the Button1 page</div>
 </body>
 </html>
