--- a/src/main/resources/templates/buttonTwo.html
+++ b/src/main/resources/templates/buttonTwo.html
@@ -4,6 +4,7 @@
     <div th:replace="_fragments::head (page=button2)"></div>
 </head>
 <body>
-<div th:replace="_fragments::navigation (headerText='This is the Button Two page', page='button2')"></div>
+<div th:replace="_fragments::navigation (page='button2')"></div>
+<div class="jumbotron">This is the Button2 page</div>
 </body>
 </html>
