--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,7 +4,7 @@
     <title th:replace="_fragments::head (page=home)">SampleApp1</title>
 </head>
 <body>
-<div th:replace="_fragments::navigation (headerText='Welcome to Codekvast Sample1', page='home')"></div>
+<div th:replace="_fragments::navigation (page='home')"></div>
 
 <form id="codekvastForm" action="/openCodekvastDashboard" method="post" target="_blank">
     <fieldset>
