--- a/src/main/resources/templates/buttonThree.html
+++ b/src/main/resources/templates/buttonThree.html
@@ -4,6 +4,7 @@
     <div th:replace="_fragments::head (page=button3)"></div>
 </head>
 <body>
-<div th:replace="_fragments::navigation (headerText='This is the Button Three page', page='button3')"></div>
+<div th:replace="_fragments::navigation (page='button3')"></div>
+<div class="jumbotron">This is the Button3 page</div>
 </body>
 </html>
