--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,22 +6,35 @@
 <body>
 <div th:replace="_fragments::navigation (page='home')"></div>
 
-<form id="codekvastForm" action="/openCodekvastDashboard" method="post" target="_blank">
-    <fieldset>
-        <legend>This is a simple Spring Boot app that is instrumented with Codekvast Agent</legend>
-        <p>I guess that you want to see what data Codekvast Agent is collecting?</p>
-        <p>Normally, you do that by issuing <code class="terminal">heroku addons:open codekvast</code> from your Heroku
+<div class="card">
+    <div class="card-block">
+        <h4 class="card-title">This is a simple Spring Boot app that is instrumented with Codekvast Agent</h4>
+        <p class="card-text">The app does not do anything useful.</p>
+        <p class="card-text">It contains a number of pages, each one served by a server-side service.</p>
+        <p class="card-text">The app is started with Codekvast Agent attached, which means that the invocations of the
+        server-side code are tracked and uploaded to <a href="https://app.codekvast.io" target="_blank">Codekvast
+                Warehouse</a>.</p>
+        <p class="card-text">Now I guess that you want to see what data Codekvast Agent is collecting?</p>
+        <p class="card-text">Normally, you do that by issuing <code class="terminal">heroku addons:open codekvast</code>
+            from your Heroku
             app's development workspace (or from the Heroku dashboard).</p>
-        <p>That will do a Single-Sign On (SSO) to <a href="https://app.codekvast.io" target="_blank">Codekvast
+        <p class="card-text">That will do a Single-Sign On (SSO) to <a href="https://app.codekvast.io" target="_blank">Codekvast
             Warehouse</a> with your Heroku credentials, allowing you to browse the data for the instrumented app.</p>
-        <p>For demonstration purposes, this sample app is able to perform the same SSO as Heroku. This enables you to
+        <p class="card-text">For demonstration purposes, this sample app is able to perform the same SSO as Heroku. This
+            enables you to
             immediately kick the tyres of Codekvast without having a Heroku app.</p>
-        <p>Also for demonstration purposes, this sample app is configured with a very short collection interval.</p>
-
-        <label for="email">Your simulated Heroku user:&nbsp;</label><input id="email" name="email" type="email"
-                                                                           title="Simulate that you are logged in to Heroku as this user"/>
-        <input type="submit" value="Open Codekvast Warehouse"/>
-    </fieldset>
+        <p class="card-text">Also for demonstration purposes, this sample app is configured with a very short collection
+            interval.</p>
+    </div>
+</div>
+<form action="/openCodekvastDashboard" method="post" target="_blank">
+    <div class="form-group">
+        <label for="email">Your simulated Heroku user:</label>
+        <input type="email" class="form-control" id="email" aria-describedby="emailHelp"
+               title="Simulate that you are logged in to Heroku as this user"/>
+        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+    </div>
+    <button type="submit" class="btn btn-primary">Open Codekvast Warehouse</button>
 </form>
 </body>
 </html>
