--- a/src/main/resources/templates/_fragments.html
+++ b/src/main/resources/templates/_fragments.html
@@ -2,9 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <body>
 
-<div th:fragment="head(page)">
+<div th:fragment="head(feature)">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <title th:text="'Codekvast Sample1 - ' + ${page}">Codekvast Sample1</title>
+    <title th:text="'Codekvast Sample1 - ' + ${feature}">Codekvast Sample1</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous"/>
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
@@ -12,7 +12,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 </div>
 
-<div th:fragment="navigation(page)">
+<div th:fragment="navigation(feature)">
     <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -21,17 +21,20 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li th:class="${page.equals('home')}? 'nav-item active' : 'nav-item'">
-                    <a class="nav-link" th:href="@{/}">Home <span th:if="${page.equals('home')}" class="sr-only">(current)</span></a>
+                <li th:class="${feature.equals('home')}? 'nav-item active' : 'nav-item'">
+                    <a class="nav-link" th:href="@{/}">Home <span th:if="${feature.equals('home')}" class="sr-only">(current)</span></a>
                 </li>
-                <li th:class="${page.equals('button1')}? 'nav-item active' : 'nav-item'">
-                    <a class="nav-link" th:href="@{/button1}">Button1 <span th:if="${page.equals('button1')}" class="sr-only">(current)</span></a>
+                <li th:class="${feature.equals('feature1')}? 'nav-item active' : 'nav-item'">
+                    <a class="nav-link" th:href="@{/feature1}">Feature1 <span th:if="${feature.equals('feature1')}"
+                                                                              class="sr-only">(current)</span></a>
                 </li>
-                <li th:class="${page.equals('button2')}? 'nav-item active' : 'nav-item'">
-                    <a class="nav-link" th:href="@{/button2}">Button2 <span th:if="${page.equals('button2')}" class="sr-only">(current)</span></a>
+                <li th:class="${feature.equals('feature2')}? 'nav-item active' : 'nav-item'">
+                    <a class="nav-link" th:href="@{/feature2}">Feature2 <span th:if="${feature.equals('feature2')}"
+                                                                              class="sr-only">(current)</span></a>
                 </li>
-                <li th:class="${page.equals('button3')}? 'nav-item active' : 'nav-item'">
-                    <a class="nav-link" th:href="@{/button3}">Button3 <span th:if="${page.equals('button3')}" class="sr-only">(current)</span></a>
+                <li th:class="${feature.equals('feature3')}? 'nav-item active' : 'nav-item'">
+                    <a class="nav-link" th:href="@{/feature3}">Feature3 <span th:if="${feature.equals('feature3')}"
+                                                                              class="sr-only">(current)</span></a>
                 </li>
             </ul>
         </div>
