Added Google Analytics tracker

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -36,5 +36,6 @@
         <button class="btn btn-primary ml-2">Open Codekvast Warehouse</button>
     </form>
 </div>
+<div th:replace="_fragments::google_analytics"></div>
 </body>
 </html>
