--- a/src/main/resources/templates/feature2.html
+++ b/src/main/resources/templates/feature2.html
@@ -6,5 +6,6 @@
 <body>
 <div th:replace="_fragments::navigation (feature='feature2')"></div>
 <div class="jumbotron">This is feature 2</div>
+<div th:replace="_fragments::google_analytics"></div>
 </body>
 </html>
