--- a/src/main/resources/templates/_fragments.html
+++ b/src/main/resources/templates/_fragments.html
@@ -4,7 +4,7 @@
 
 <th:block th:fragment="head(feature)">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <title th:text="'Codekvast Sample1 - ' + ${feature}">Codekvast Sample1</title>
+    <title th:text="'Codekvast Demo1 - ' + ${feature}">Codekvast Demo1</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
           integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous"/>
@@ -26,7 +26,7 @@
                 aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" th:href="@{/}">CodekvastSample1</a>
+        <a class="navbar-brand" th:href="@{/}">CodekvastDemo1</a>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
