Added warning about Codekvast Warehouse being designed for the desktop.

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -23,6 +23,8 @@
         immediately <em>kick the tyres of Codekvast without having a Heroku app!</em></p>
     <p class="card-text">Also for demonstration purposes, this app is configured with a very short collection
         interval (seconds instead of hours).</p>
+    <p class="text-danger font-weight-bold font-italic">Note that Codekvast Warehouse is designed for the desktop!
+    </p>
     <hr/>
     <form class="form-inline" action="/openCodekvastDashboard" method="post" target="_blank">
         <div class="form-group">
