Made link target configurable

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -26,7 +26,7 @@
     <p class="text-danger font-weight-bold font-italic">Note that Codekvast Dashboard is designed for the desktop!
     </p>
     <hr/>
-    <form class="form-inline" action="/openCodekvastDashboard" method="post" target="_blank">
+    <form class="form-inline" action="/openCodekvastDashboard" method="post" target="[[${dashboardTarget}]]">
         <div class="form-group">
             <label for="email">Your simulated Heroku user:</label>
             <select id="email" name="email" class="form-control ml-2">
