Corrected links to dashboard.

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,12 +10,12 @@
     <p class="card-text">The app does not do anything useful.</p>
     <p class="card-text">It contains a number of pages, each one served by a server-side service.</p>
     <p class="card-text">The app is started with Codekvast Agent attached, which means that the invocations of the
-        server-side code are tracked and uploaded to <a href="https://app.codekvast.io" target="_blank">Codekvast
+        server-side code are tracked and uploaded to <a href="https://dashboard.codekvast.io" target="_blank">Codekvast
             Dashboard</a>.</p>
     <p class="card-text">Now I guess that you want to see what data Codekvast Agent is collecting? Normally, you do that
         by issuing <code class="terminal">heroku addons:open codekvast</code>
         from your app's development workspace (or from the Heroku dashboard). That will do a Single-Sign On (SSO) to <a
-                href="https://app.codekvast.io" target="_blank">Codekvast
+                href="https://dashboard.codekvast.io" target="_blank">Codekvast
             Dashboard</a> using your Heroku credentials, allowing you to browse the data for the instrumented app.</p>
     <p class="card-text">For demonstration purposes, this app is able to perform the same SSO as Heroku.
         This
